Fix an issue with header button alignment

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.1350.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.1350.pcss
@@ -31,6 +31,7 @@
 
 .SiteHeader__CTAGroup {
     margin-bottom: -16px;
+    margin-left: -10px;
 }
 
 .SiteHeader__FeaturedImage--HasSize-Half {
